auto manager fixes