@@ -6,6 +6,7 @@ import java.util.List;
 
 import com.pathplanner.lib.auto.AutoBuilder;
 import com.pathplanner.lib.path.PathPlannerPath;
+import com.pathplanner.lib.util.FlippingUtil;
 import edu.wpi.first.math.Pair;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.wpilibj.DriverStation;
@@ -18,6 +19,7 @@ import edu.wpi.first.wpilibj2.command.WaitUntilCommand;
 import frc.robot.RobotStates;
 import frc.robot.autos.routines.AutoEventLooper;
 import frc.robot.autos.routines.AutoTrigger;
+import frc.robot.constants.Constants;
 import frc.robot.util.FieldUtil;
 import frc.robot.util.MultipleChooser;
 import org.json.simple.parser.ParseException;
@@ -70,10 +72,11 @@ public final class AutoManager {
             List<Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level>> scoringLocations,
             RobotStates robotStates
     ) {
+        List<Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level>> currentScoringLocations = new ArrayList<>(scoringLocations);
         AutoEventLooper autoEventLooper = new AutoEventLooper("AutoEventLooper");
 
         List<AutoTrigger> triggers = new ArrayList<>();
-        Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> firstScoringLocation = scoringLocations.get(0);
+        Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> firstScoringLocation = currentScoringLocations.get(0);
         String firstPath = startPosition.index + "," + firstScoringLocation.getFirst().name();
 
         triggers.add(autoEventLooper.addTrigger(
@@ -83,7 +86,7 @@ public final class AutoManager {
                         PathPlannerPath path = PathPlannerPath.fromPathFile(firstPath);
 
                         return new InstantCommand(() -> robotStates.setCurrentAutoLevel(firstScoringLocation.getSecond()))
-                                .andThen(() -> AutoBuilder.resetOdom(path.getStartingHolonomicPose().orElse(Pose2d.kZero)))
+                                .andThen(() -> robotStates.swerve.localizer.setPoses(getStartingPose(path)))
                                 .andThen(AutoBuilder.followPath(path));
                     } catch (IOException | ParseException e) {
                         DriverStation.reportError("Failed to load path: " + e.getMessage(), e.getStackTrace());
@@ -99,14 +102,14 @@ public final class AutoManager {
                         .andThen(new WaitUntilCommand(robotStates.stowState))
         ));
 
-        while (!scoringLocations.isEmpty()) {
-            Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> currentScoringLocation = scoringLocations.removeFirst();
+        while (!currentScoringLocations.isEmpty()) {
+            Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> currentScoringLocation = currentScoringLocations.remove(0);
 
-            if (scoringLocations.isEmpty()) {
+            if (currentScoringLocations.isEmpty()) {
                 break;
             }
 
-            Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> nextScoringLocation = scoringLocations.getFirst();
+            Pair<FieldUtil.Reef.ScoringLocation, FieldUtil.Reef.Level> nextScoringLocation = currentScoringLocations.get(0);
             String nearestCoralStation = getMostEfficientCoralStation(
                     currentScoringLocation.getFirst().pose,
                     nextScoringLocation.getFirst().pose
@@ -170,5 +173,10 @@ public final class AutoManager {
                 currentLocation.getTranslation().getDistance(tags.get(1).pose2d.getTranslation())
                 + nextLocation.getTranslation().getDistance(tags.get(1).pose2d.getTranslation());
         return station1TotalDistance < station2TotalDistance ? "station-1" : "station-2";
+    }
+
+    private Pose2d getStartingPose(PathPlannerPath path) {
+        Pose2d startingPoseBlue = path.getStartingHolonomicPose().orElse(Pose2d.kZero);
+        return Constants.ALLIANCE_SUPPLIER.get() == DriverStation.Alliance.Red ? FlippingUtil.flipFieldPose(startingPoseBlue) : startingPoseBlue;
     }
 }
